RESOLVED FIXED39878
[Qt]: REGRESSION(r58703): QWebSettings::JavascriptCanAccessClipboard has wrong case in "Javascript" part.
https://bugs.webkit.org/show_bug.cgi?id=39878
Summary [Qt]: REGRESSION(r58703): QWebSettings::JavascriptCanAccessClipboard has wron...
Raine Makelainen
Reported 2010-05-28 09:05:58 PDT
Created attachment 57335 [details] Proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. WebKit/qt/Api/qwebsettings.h has a wrong case in JavascriptCanAccessClipboard. Currently WebKit/qt/Api/qwebsettings.h has QWebSettings::JavaScriptCanAccessClipboard instead of QWebSettings::JavascriptCanAccessClipboard. Thus, causing API break. According to current documentation, it should be QWebSettings::JavascriptCanAccessClipboard, same with older 4.6 docs. http://doc.trolltech.com/4.7-snapshot/qwebsettings.html http://doc.trolltech.com/4.6/qwebsettings.html
Attachments
Proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. (4.17 KB, patch)
2010-05-28 09:05 PDT, Raine Makelainen
no flags
2nd proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. (6.38 KB, patch)
2010-05-31 05:40 PDT, Raine Makelainen
hausmann: review-
hausmann: commit-queue-
Proposal 3 for fixing QWebSettings::JavascriptCanAccessClipboard enum. (8.17 KB, patch)
2010-06-01 04:29 PDT, Raine Makelainen
no flags
Simon Hausmann
Comment 1 2010-05-31 00:51:42 PDT
Comment on attachment 57335 [details] Proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. Raine, I think your patch is on the right track but not entirely correct. r58703 also added the DOMPasteAllowed enum. I think the correct patch would revert that part of r58703 and store JavascriptCanAccessClipboard at the old position.
Raine Makelainen
Comment 2 2010-05-31 03:16:30 PDT
(In reply to comment #1) > (From update of attachment 57335 [details]) > Raine, I think your patch is on the right track but not entirely correct. r58703 also added the DOMPasteAllowed enum. I think the correct patch would revert that part of r58703 and store JavascriptCanAccessClipboard at the old position. Thanks, for comments, I'll incorporate comments. Should we leave call to WebCore::Settings::setDOMPasteAllowed(false) or similar at qwebsettings.cpp. What do you think?
Raine Makelainen
Comment 3 2010-05-31 05:40:57 PDT
Created attachment 57456 [details] 2nd proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. Review comments from Simon merged.
Simon Hausmann
Comment 4 2010-06-01 02:57:16 PDT
(In reply to comment #3) > Created an attachment (id=57456) [details] > 2nd proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. > > Review comments from Simon merged. If you would like your patch to be included in WebKit, please mark it up for review (set review?) so that it can be reviewed. You might also want to consider setting the commit-queue flag (http://trac.webkit.org/wiki/CommitQueue)
Simon Hausmann
Comment 5 2010-06-01 03:26:28 PDT
Comment on attachment 57456 [details] 2nd proposal for fixing QWebSettings::JavascriptCanAccessClipboard enum. Thanks Raine :) I think the patch looks good, but please add ChangeLog entries. You can use WebKitTools/Scripts/prepare-ChangeLog for that. r- because of that, the rest looks good to me.
Raine Makelainen
Comment 6 2010-06-01 04:29:21 PDT
Created attachment 57529 [details] Proposal 3 for fixing QWebSettings::JavascriptCanAccessClipboard enum. ChangeLogs added.
Simon Hausmann
Comment 7 2010-06-01 05:24:34 PDT
Comment on attachment 57529 [details] Proposal 3 for fixing QWebSettings::JavascriptCanAccessClipboard enum. r=me. Welcome Raine to WebKit development :)
Kenneth Rohde Christiansen
Comment 8 2010-06-01 05:25:01 PDT
Good work Raine!
WebKit Commit Bot
Comment 9 2010-06-01 19:07:15 PDT
Comment on attachment 57529 [details] Proposal 3 for fixing QWebSettings::JavascriptCanAccessClipboard enum. Clearing flags on attachment: 57529 Committed r60525: <http://trac.webkit.org/changeset/60525>
WebKit Commit Bot
Comment 10 2010-06-01 19:07:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.