2010-06-01  Raine Makelainen  <raine.makelainen@nokia.com>

Reviewed by Simon Hausmann.

        [Qt]: REGRESSION(r58703): QWebSettings::JavascriptCanAccessClipboard has wrong case in "Javascript" part.
        https://bugs.webkit.org/show_bug.cgi?id=39878

        QWebSettings::JavaScriptCanAccessClipboard reverted back to
        QWebSettings::JavascriptCanAccessClipboard. QWebSettings::DOMPasteAllowed enum removed.

        Value of QWebSettings::JavascriptCanAccessClipboard to setDOMPasteAllowed and
        setJavaScriptCanAccessClipboard of WebCore::Settings.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * Api/qwebsettings.h:
2010-06-01  Raine Makelainen  <raine.makelainen@nokia.com>

        Reviewed by Simon Hausmann.

        Fixed tests to use QWebSettings::JavascriptCanAccessClipboard instead of QWebSettings::JavaScriptCanAccessClipboard.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::WebPage):
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setJavaScriptCanAccessClipboard):

Canonical link: https://commits.webkit.org/51558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60525 268f45cc-cd09-0410-ab3c-d52691b4dbfc