WebKit/qt/Api/qwebsettings.cpp
@@ -184,9 +184,10 @@ void QWebSettingsPrivate::apply()
                                       global->attributes.value(QWebSettings::SpatialNavigationEnabled));
         settings->setSpatialNavigationEnabled(value);
 
-        value = attributes.value(QWebSettings::DOMPasteAllowed,
-                                      global->attributes.value(QWebSettings::DOMPasteAllowed));
+        value = attributes.value(QWebSettings::JavascriptCanAccessClipboard,
+                                      global->attributes.value(QWebSettings::JavascriptCanAccessClipboard));
         settings->setDOMPasteAllowed(value);
+        settings->setJavaScriptCanAccessClipboard(value);
 
         value = attributes.value(QWebSettings::DeveloperExtrasEnabled,
                                       global->attributes.value(QWebSettings::DeveloperExtrasEnabled));
@@ -234,10 +235,6 @@ void QWebSettingsPrivate::apply()
         value = attributes.value(QWebSettings::LocalContentCanAccessFileUrls,
                                       global->attributes.value(QWebSettings::LocalContentCanAccessFileUrls));
         settings->setAllowFileAccessFromFileURLs(value);
-
-        value = attributes.value(QWebSettings::JavaScriptCanAccessClipboard,
-                                      global->attributes.value(QWebSettings::JavaScriptCanAccessClipboard));
-        settings->setJavaScriptCanAccessClipboard(value);
 
         value = attributes.value(QWebSettings::XSSAuditingEnabled,
                                       global->attributes.value(QWebSettings::XSSAuditingEnabled));
@@ -376,8 +373,6 @@ QWebSettings* QWebSettings::globalSettings()
         recording visited pages in the history and storing web page icons. This is disabled by default.
     \value JavascriptCanOpenWindows Specifies whether JavaScript programs
         can open new windows. This is disabled by default.
-    \value DOMPasteAllowed Specifies whether JavaScript programs can
-        read clipboard contents.
     \value JavascriptCanAccessClipboard Specifies whether JavaScript programs
         can read or write to the clipboard. This is disabled by default.
     \value DeveloperExtrasEnabled Enables extra tools for Web developers.
